apps/grafana/templates/grafana-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
  - "jiun2.ddns.net"
  - "grafana.internal"
  gateways:
  - istio-system/external-gateway
  - istio-system/internal-gateway
  http:
  - match:
    - uri:
        prefix: /grafana/api/live
      gateways:
      - istio-system/external-gateway
    rewrite:
      uri: /api/live
    route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
    timeout: 300s
  - match:
    - uri:
        prefix: /grafana
      gateways:
      - istio-system/external-gateway
    rewrite:
      uri: /
    route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
  - match:
    - headers:
        upgrade:
          exact: websocket
      gateways:
      - istio-system/internal-gateway
    route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
    timeout: 300s
  - match:
    - gateways:
      - istio-system/internal-gateway
    route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
